--- a/index.html
+++ b/index.html
@@ -124,10 +124,13 @@
       </div>
     </header>
     <main class="md:container md:mx-auto">
-
+      <section class="mt-4">
+        <h2 class="text-3xl text-center text-black">Professional Hockeys Club</h2>
+        <p class="text-base font-medium text-center text-black">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br>dolor. Purus urna in sit nullam proin. </p>
+      </section>
     </main>
     <footer>
-
+      
     </footer>
 </body>
 
