--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hockey</title>
-    <!-- Tailwind and daisy ui cdn -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Google fonts Manrope -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hockey</title>
+  <!-- Tailwind and daisy ui cdn -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Google fonts Manrope -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
-   <!-- tailwinds Custom classes -->
-   <script>
+  <!-- tailwinds Custom classes -->
+  <script>
     tailwind.config = {
       theme: {
         extend: {
@@ -29,109 +29,143 @@
     }
   </script>
 
-    <!-- Custom styles -->
-    <style>
-        .font-Manrope{
-            font-family: "Manrope", sans-serif;
-        }
-    </style>
+  <!-- Custom styles -->
+  <style>
+    .font-Manrope {
+      font-family: "Manrope", sans-serif;
+    }
+  </style>
 </head>
 
 <body class="font-Manrope">
-    <header class="md:container md:mx-auto">
-        <nav>
-            <div class="navbar bg-base-100">
-                <div class="navbar-start">
-                    <div class="dropdown">
-                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M4 6h16M4 12h8m-8 6h16" />
-                            </svg>
-                        </div>
-                        <ul tabindex="0"
-                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 text-base shadow bg-base-100 rounded-box w-52">
-                            <li><a>Home</a></li>
-                            <li><a>About</a></li>
-                            <li><a>Pages</a></li>
-                            <li><a>Blog</a></li>
-                            <li><a>Contact</a></li>
-                        </ul>
-                    </div>
-                    <a class="btn btn-ghost text-4xl">Hockey<span class="bg-hockey-primary">’</span>s</a>
-                </div>
-                <div class="navbar-center hidden lg:flex">
-                    <ul class="menu menu-horizontal text-base px-1">
-                        <li><a class="bg-hockey-primary">Home</a></li>
-                        <li><a>About</a></li>
-                        <li><a>Pages</a></li>
-                        <li><a>Blog</a></li>
-                        <li><a>Contact</a></li>
-                    </ul>
-                </div>
-                <div class="navbar-end">
-                    <div class="hidden lg:flex">
-                        <img src="images/Frame.png" alt="">
-                    </div>
-                    <a class="btn bg-hockey-primary px-4 py-4 text-white">Get Ticket</a>
-                </div>
+  <header class="md:container md:mx-auto">
+    <nav>
+      <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+              </svg>
             </div>
+            <ul tabindex="0"
+              class="menu menu-sm dropdown-content mt-3 z-[1] p-2 text-base shadow bg-base-100 rounded-box w-52">
+              <li><a>Home</a></li>
+              <li><a>About</a></li>
+              <li><a>Pages</a></li>
+              <li><a>Blog</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+          <a class="btn btn-ghost text-4xl">Hockey<span class="bg-hockey-primary">’</span>s</a>
         </div>
-        
-        </nav>
-        <div class="md:container  md:mx-auto lg:relative">
-            <div class="carousel w-full">
-                <div id="slide1" class="carousel-item relative w-full">
-                    <img src="images/1.png" class="w-full" />
-                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <a href="#slide4" class="btn btn-circle">❮</a> 
-                    <a href="#slide2" class="btn btn-circle">❯</a>
-                  </div>
-                </div> 
-                <div id="slide2" class="carousel-item relative w-full">
-                    <img src="images/1.png" class="w-full" />
-                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <a href="#slide1" class="btn btn-circle">❮</a> 
-                    <a href="#slide3" class="btn btn-circle">❯</a>
-                  </div>
-                </div> 
-                <div id="slide3" class="carousel-item relative w-full">
-                    <img src="images/1.png" class="w-full" />
-                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <a href="#slide2" class="btn btn-circle">❮</a> 
-                    <a href="#slide4" class="btn btn-circle">❯</a>
-                  </div>
-                </div> 
-                <div id="slide4" class="carousel-item relative w-full">
-                  <img src="images/1.png" class="w-full" />
-                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                    <a href="#slide3" class="btn btn-circle">❮</a> 
-                    <a href="#slide1" class="btn btn-circle">❯</a>
-                  </div>
-                </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal text-base px-1">
+            <li><a class="bg-hockey-primary">Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Pages</a></li>
+            <li><a>Blog</a></li>
+            <li><a>Contact</a></li>
+          </ul>
         </div>
-        <div class="hidden lg:flex h-[30vh] w-2/4 flex-1  mx-auto absolute right-12  bottom-16 bg-black p-8">
-            <div>
-              <h3 class="text-2xl text-white pb-4">Meet all the heroes from the field</h3>
-            <p class="text-base text-white">Dit amet consectetur. Condimentum dignissim adipiscing aliquam <br> turpis placerat dolor. Purus urna in sit nullam proin. </p>
-            </div>
+        <div class="navbar-end">
+          <div class="hidden lg:flex">
+            <img src="images/Frame.png" alt="">
+          </div>
+          <a class="btn bg-hockey-primary px-4 py-4 text-white">Get Ticket</a>
         </div>
-        </div>
-        <div class="h-[30vh] w-4/4  bg-black p-8 lg:hidden">
-          <h3 class="text-xl text-white pb-2">Meet all the heroes from the field</h3>
-          <p class="text-base text-white">Dit amet consectetur. Condimentum dignissim adipiscing aliquam <br> turpis placerat dolor. Purus urna in sit nullam proin. </p>
       </div>
-    </header>
-    <main class="md:container md:mx-auto">
-      <section class="mt-4">
-        <h2 class="text-3xl text-center text-black">Professional Hockeys Club</h2>
-        <p class="text-base font-medium text-center text-black">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br>dolor. Purus urna in sit nullam proin. </p>
-      </section>
-    </main>
-    <footer>
-      
-    </footer>
+      </div>
+
+    </nav>
+    <div class="md:container  md:mx-auto lg:relative">
+      <div class="carousel w-full">
+        <div id="slide1" class="carousel-item relative w-full">
+          <img src="images/1.png" class="w-full" />
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide2" class="carousel-item relative w-full">
+          <img src="images/1.png" class="w-full" />
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide3" class="carousel-item relative w-full">
+          <img src="images/1.png" class="w-full" />
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide2" class="btn btn-circle">❮</a>
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide4" class="carousel-item relative w-full">
+          <img src="images/1.png" class="w-full" />
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide3" class="btn btn-circle">❮</a>
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
+      <div class="hidden lg:flex h-[30vh] w-2/4 flex-1  mx-auto absolute right-12  bottom-16 bg-black p-8">
+        <div>
+          <h3 class="text-2xl text-white pb-4">Meet all the heroes from the field</h3>
+          <p class="text-base text-white">Dit amet consectetur. Condimentum dignissim adipiscing aliquam <br> turpis
+            placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+      </div>
+    </div>
+    <div class="h-[30vh] w-4/4  bg-black p-8 lg:hidden">
+      <h3 class="text-xl text-white pb-2">Meet all the heroes from the field</h3>
+      <p class="text-base text-white">Dit amet consectetur. Condimentum dignissim adipiscing aliquam <br> turpis
+        placerat dolor. Purus urna in sit nullam proin. </p>
+    </div>
+  </header>
+  <main class="md:container md:mx-auto">
+    <section class="mt-4">
+      <h2 class="text-3xl text-center text-black">Professional Hockeys Club</h2>
+      <p class="text-base font-medium text-center text-black">Dit amet consectetur. Condimentum dignissim adipiscing
+        aliquam turpis placerat <br>dolor. Purus urna in sit nullam proin. </p>
+    </section>
+    <section class="mt-5">
+      <div class="lg:flex justify-evenly pt-5">
+        <div class="gap-3 items-center justify-center">
+          <div class="ml-36 lg:ml-16">
+            <div class="radial-progress text-primary" style="--value:87;" role="progressbar "> <span class="text-black">87%</span> </div>
+          </div>
+          <h4 class="text-xl text-center pt-4 pb-4">Prayer Facility</h4>
+          <p class="text-center text-base font-medium pb-4">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+        </div>
+        <div class="gap-3 items-center justify-center">
+          <div class="ml-24 lg:ml-8">
+            <div class="radial-progress ml-16 text-secondary" style="--value:95;" role="progressbar"><span class="text-black">95%</span> </div>
+          </div>
+          <h4 class="text-xl text-center pt-4 pb-4">Experienced Coach</h4>
+          <p class="text-center text-base font-medium pb-4">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+        </div>
+        <div class="gap-3 items-center justify-center">
+          <div class="ml-24 lg:ml-8">
+            <div class="radial-progress ml-16 text-accent" style="--value:90;" role="progressbar"><span class="text-black">90%</span> </div>
+          </div>
+          <h4 class="text-xl text-center pt-4 pb-4">Experienced Coach</h4>
+          <p class="text-center text-base font-medium pb-4">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+        </div>
+        <div class="gap-3 items-center justify-center">
+          <div class="ml-24 lg:ml-8">
+            <div class="radial-progress ml-16" style="--value:80;" role="progressbar"><span class="text-black">80%</span> </div>
+          </div>
+          <h4 class="text-xl text-center pt-4 pb-4">Experienced Coach</h4>
+          <p class="text-center text-base font-medium">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+
+  </footer>
 </body>
 
 </html>
