--- a/index.html
+++ b/index.html
@@ -162,7 +162,50 @@
         </div>
       </div>
     </section>
-
+    <section class="mt-4">
+      <h2 class="text-3xl text-center text-black">Program Sections</h2>
+      <p class="text-base font-medium text-center text-black">Dit amet consectetur. Condimentum dignissim adipiscing
+        aliquam turpis placerat <br>dolor. Purus urna in sit nullam proin. </p>
+    </section>
+    <section class="mt-12 gap-12">
+      <div class="grid grid-cols-1 lg:grid-cols-2 md:grid-cols-1">
+        <div class="mb-4">
+          <div class="relative">
+            <img src="Images/2.png" alt="">
+            <div class="absolute left left-4 bottom  lg:left-10 bottom bottom-6 lg:bottom-12">
+              <h4 class="text-xl font-semibold lg:text-2xl text-white">Junior Program</h3>
+                <p class="text-xs lg:text-base text-white font-extralight lg:font-normal pt-1 lg:pt-3 pb-1 lg:pb-3">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit <br>
+                  enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue sed et in.</p>
+                  <button class="bg-hockey-primary p-2 lg:p-6 text-white">Register Now!</button>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="relative">
+            <img src="Images/3.png" alt="">
+            <div class="absolute left left-2 lg:left-10 bottom bottom-6 lg:bottom-12">
+              <h4 class="text-xl font-semibold lg:text-2xl text-white">Teenager Program</h3>
+                <p class="text-xs lg:text-base text-white font-extralight lg:font-normal pt-1 lg:pt-3 pb-1 lg:pb-3">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit <br>
+                  enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue sed et in.</p>
+                  <button class="bg-hockey-primary p-2 lg:p-6 text-white">Register Now!</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="mt-4">
+        <div class="relative">
+          <img src="Images/4.png" alt="">
+          <div class="absolute left left-4 lg:left-10 bottom bottom-4 lg:bottom-12">
+              <h4 class="text-xl font-semibold lg:text-2xl text-white">Professional Program</h3>
+              <p class="text-xs lg:text-base text-white font-extralight lg:font-normal pt-1 lg:pt-3 pb-1 lg:pb-3">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit <br>
+                enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue sed et in.</p>
+                <button class="bg-hockey-primary p-2 lg:p-6 text-white">Register Now!</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
