--- a/index.html
+++ b/index.html
@@ -134,28 +134,35 @@
       <div class="lg:flex justify-evenly pt-5">
         <div class="gap-3 items-center justify-center">
           <div class="ml-36 lg:ml-16">
-            <div class="radial-progress text-primary" style="--value:87;" role="progressbar "> <span class="text-black">87%</span> </div>
+            <div class="radial-progress text-primary" style="--value:87;" role="progressbar "> <span
+                class="text-black">87%</span> </div>
           </div>
           <h4 class="text-xl text-center pt-4 pb-4">Prayer Facility</h4>
-          <p class="text-center text-base font-medium pb-4">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+          <p class="text-center text-base font-medium pb-4">Amet consectetur. Condimentum <br> dignissim adipiscing .
+          </p>
         </div>
         <div class="gap-3 items-center justify-center">
           <div class="ml-24 lg:ml-8">
-            <div class="radial-progress ml-16 text-secondary" style="--value:95;" role="progressbar"><span class="text-black">95%</span> </div>
+            <div class="radial-progress ml-16 text-secondary" style="--value:95;" role="progressbar"><span
+                class="text-black">95%</span> </div>
           </div>
           <h4 class="text-xl text-center pt-4 pb-4">Experienced Coach</h4>
-          <p class="text-center text-base font-medium pb-4">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+          <p class="text-center text-base font-medium pb-4">Amet consectetur. Condimentum <br> dignissim adipiscing .
+          </p>
         </div>
         <div class="gap-3 items-center justify-center">
           <div class="ml-24 lg:ml-8">
-            <div class="radial-progress ml-16 text-accent" style="--value:90;" role="progressbar"><span class="text-black">90%</span> </div>
+            <div class="radial-progress ml-16 text-accent" style="--value:90;" role="progressbar"><span
+                class="text-black">90%</span> </div>
           </div>
           <h4 class="text-xl text-center pt-4 pb-4">Experienced Coach</h4>
-          <p class="text-center text-base font-medium pb-4">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+          <p class="text-center text-base font-medium pb-4">Amet consectetur. Condimentum <br> dignissim adipiscing .
+          </p>
         </div>
         <div class="gap-3 items-center justify-center">
           <div class="ml-24 lg:ml-8">
-            <div class="radial-progress ml-16" style="--value:80;" role="progressbar"><span class="text-black">80%</span> </div>
+            <div class="radial-progress ml-16" style="--value:80;" role="progressbar"><span
+                class="text-black">80%</span> </div>
           </div>
           <h4 class="text-xl text-center pt-4 pb-4">Experienced Coach</h4>
           <p class="text-center text-base font-medium">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
@@ -174,9 +181,11 @@
             <img src="Images/2.png" alt="">
             <div class="absolute left left-4 bottom  lg:left-10 bottom bottom-6 lg:bottom-12">
               <h4 class="text-xl font-semibold lg:text-2xl text-white">Junior Program</h3>
-                <p class="text-xs lg:text-base text-white font-extralight lg:font-normal pt-1 lg:pt-3 pb-1 lg:pb-3">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit <br>
-                  enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue sed et in.</p>
-                  <button class="bg-hockey-primary p-2 lg:p-6 text-white">Register Now!</button>
+                <p class="text-xs lg:text-base text-white font-extralight lg:font-normal pt-1 lg:pt-3 pb-1 lg:pb-3">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit <br>
+                  enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue sed
+                  et in.</p>
+                <button class="bg-hockey-primary p-2 lg:p-6 text-white">Register Now!</button>
             </div>
           </div>
         </div>
@@ -185,9 +194,11 @@
             <img src="Images/3.png" alt="">
             <div class="absolute left left-2 lg:left-10 bottom bottom-6 lg:bottom-12">
               <h4 class="text-xl font-semibold lg:text-2xl text-white">Teenager Program</h3>
-                <p class="text-xs lg:text-base text-white font-extralight lg:font-normal pt-1 lg:pt-3 pb-1 lg:pb-3">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit <br>
-                  enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue sed et in.</p>
-                  <button class="bg-hockey-primary p-2 lg:p-6 text-white">Register Now!</button>
+                <p class="text-xs lg:text-base text-white font-extralight lg:font-normal pt-1 lg:pt-3 pb-1 lg:pb-3">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit <br>
+                  enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue sed
+                  et in.</p>
+                <button class="bg-hockey-primary p-2 lg:p-6 text-white">Register Now!</button>
             </div>
           </div>
         </div>
@@ -198,10 +209,202 @@
         <div class="relative">
           <img src="Images/4.png" alt="">
           <div class="absolute left left-4 lg:left-10 bottom bottom-4 lg:bottom-12">
-              <h4 class="text-xl font-semibold lg:text-2xl text-white">Professional Program</h3>
-              <p class="text-xs lg:text-base text-white font-extralight lg:font-normal pt-1 lg:pt-3 pb-1 lg:pb-3">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit <br>
-                enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue sed et in.</p>
-                <button class="bg-hockey-primary p-2 lg:p-6 text-white">Register Now!</button>
+            <h4 class="text-xl font-semibold lg:text-2xl text-white">Professional Program</h3>
+              <p class="text-xs lg:text-base text-white font-extralight lg:font-normal pt-1 lg:pt-3 pb-1 lg:pb-3">Dolor
+                sit amet consectetur. Ut urna diam quis sagittis. Elit elit <br>
+                enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor congue sed
+                et in.</p>
+              <button class="bg-hockey-primary p-2 lg:p-6 text-white">Register Now!</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="mt-4">
+      <h2 class="text-3xl text-center text-black">Our New Products</h2>
+      <p class="text-base font-medium text-center text-black">Dit amet consectetur. Condimentum dignissim adipiscing
+        aliquam turpis placerat <br>dolor. Purus urna in sit nullam proin. </p>
+    </section>
+
+    <section>
+      <div class="grid grid-cols-1 lg:grid-cols-2">
+        <div class="hero min-h-screen bg-white border-2">
+          <div class="hero-content flex-col lg:flex-row">
+            <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+            <div>
+              <div class="flex items-center space-x-2">
+                <div class="flex items-center">
+                  <img src="Images/Star.png" alt="">
+                  <p>5.0</p>
+                </div>
+                <div class="flex items-center">
+                  <img src="Images/Eye.png" alt="">
+                  <p>20</p>
+                </div>
+                <div class="flex items-center">
+                  <img src="Images/Love.png" alt="">
+                  <p>200</p>
+                </div>
+              </div>
+              <h4 class="text-base font-bold text-black">World Cup Flags Football</h4>
+              <p class="py-6 text-base font-normal">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+              <div class="flex items-center space-x-2">
+                <p class="bg-hockey-primary text-base">Price - $22.00</p>
+                <div class="flex items-center space-x-2">
+                  <img src="Images/bazarcarry.png" alt="">
+                  <p class="text-base font-normal">Delivery Fee : Free</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="hero min-h-screen bg-white border-2">
+          <div class="hero-content flex-col lg:flex-row">
+            <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+            <div>
+              <div class="flex items-center space-x-2">
+                <div class="flex items-center">
+                  <img src="Images/Star.png" alt="">
+                  <p>5.0</p>
+                </div>
+                <div class="flex items-center">
+                  <img src="Images/Eye.png" alt="">
+                  <p>20</p>
+                </div>
+                <div class="flex items-center">
+                  <img src="Images/Love.png" alt="">
+                  <p>200</p>
+                </div>
+              </div>
+              <h4 class="text-base font-bold text-black">World Cup Flags Football</h4>
+              <p class="py-6 text-base font-normal">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+              <div class="flex items-center space-x-2">
+                <p class="bg-hockey-primary text-base">Price - $22.00</p>
+                <div class="flex items-center space-x-2">
+                  <img src="Images/bazarcarry.png" alt="">
+                  <p class="text-base font-normal">Delivery Fee : Free</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="hero min-h-screen bg-white border-2">
+          <div class="hero-content flex-col lg:flex-row">
+            <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+            <div>
+              <div class="flex items-center space-x-2">
+                <div class="flex items-center">
+                  <img src="Images/Star.png" alt="">
+                  <p>5.0</p>
+                </div>
+                <div class="flex items-center">
+                  <img src="Images/Eye.png" alt="">
+                  <p>20</p>
+                </div>
+                <div class="flex items-center">
+                  <img src="Images/Love.png" alt="">
+                  <p>200</p>
+                </div>
+              </div>
+              <h4 class="text-base font-bold text-black">World Cup Flags Football</h4>
+              <p class="py-6 text-base font-normal">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+              <div class="flex items-center space-x-2">
+                <p class="bg-hockey-primary text-base">Price - $22.00</p>
+                <div class="flex items-center space-x-2">
+                  <img src="Images/bazarcarry.png" alt="">
+                  <p class="text-base font-normal">Delivery Fee : Free</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="hero min-h-screen bg-white border-2">
+          <div class="hero-content flex-col lg:flex-row">
+            <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+            <div>
+              <div class="flex items-center space-x-2">
+                <div class="flex items-center">
+                  <img src="Images/Star.png" alt="">
+                  <p>5.0</p>
+                </div>
+                <div class="flex items-center">
+                  <img src="Images/Eye.png" alt="">
+                  <p>20</p>
+                </div>
+                <div class="flex items-center">
+                  <img src="Images/Love.png" alt="">
+                  <p>200</p>
+                </div>
+              </div>
+              <h4 class="text-base font-bold text-black">World Cup Flags Football</h4>
+              <p class="py-6 text-base font-normal">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+              <div class="flex items-center space-x-2">
+                <p class="bg-hockey-primary text-base">Price - $22.00</p>
+                <div class="flex items-center space-x-2">
+                  <img src="Images/bazarcarry.png" alt="">
+                  <p class="text-base font-normal">Delivery Fee : Free</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="hero min-h-screen bg-white border-2">
+          <div class="hero-content flex-col lg:flex-row">
+            <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+            <div>
+              <div class="flex items-center space-x-2">
+                <div class="flex items-center">
+                  <img src="Images/Star.png" alt="">
+                  <p>5.0</p>
+                </div>
+                <div class="flex items-center">
+                  <img src="Images/Eye.png" alt="">
+                  <p>20</p>
+                </div>
+                <div class="flex items-center">
+                  <img src="Images/Love.png" alt="">
+                  <p>200</p>
+                </div>
+              </div>
+              <h4 class="text-base font-bold text-black">World Cup Flags Football</h4>
+              <p class="py-6 text-base font-normal">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+              <div class="flex items-center space-x-2">
+                <p class="bg-hockey-primary text-base">Price - $22.00</p>
+                <div class="flex items-center space-x-2">
+                  <img src="Images/bazarcarry.png" alt="">
+                  <p class="text-base font-normal">Delivery Fee : Free</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="hero min-h-screen bg-white border-2">
+          <div class="hero-content flex-col lg:flex-row">
+            <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+            <div>
+              <div class="flex items-center space-x-2">
+                <div class="flex items-center">
+                  <img src="Images/Star.png" alt="">
+                  <p>5.0</p>
+                </div>
+                <div class="flex items-center">
+                  <img src="Images/Eye.png" alt="">
+                  <p>20</p>
+                </div>
+                <div class="flex items-center">
+                  <img src="Images/Love.png" alt="">
+                  <p>200</p>
+                </div>
+              </div>
+              <h4 class="text-base font-bold text-black">World Cup Flags Football</h4>
+              <p class="py-6 text-base font-normal">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+              <div class="flex items-center space-x-2">
+                <p class="bg-hockey-primary text-base">Price - $22.00</p>
+                <div class="flex items-center space-x-2">
+                  <img src="Images/bazarcarry.png" alt="">
+                  <p class="text-base font-normal">Delivery Fee : Free</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
