--- a/index.html
+++ b/index.html
@@ -480,6 +480,11 @@
         </div>
        </div>
     </section>
+    <section class="mt-4">
+      <h2 class="text-3xl text-center text-black">Get In Touch</h2>
+      <p class="text-base font-medium text-center text-black">Dit amet consectetur. Condimentum dignissim adipiscing
+        aliquam turpis placerat <br>dolor. Purus urna in sit nullam proin. </p>
+    </section>
   </main>
   <footer>
 
