--- a/index.html
+++ b/index.html
@@ -485,9 +485,82 @@
       <p class="text-base font-medium text-center text-black">Dit amet consectetur. Condimentum dignissim adipiscing
         aliquam turpis placerat <br>dolor. Purus urna in sit nullam proin. </p>
     </section>
+    <section class="mt-4">
+      <div class=" flex items-center justify-center rounded-lg">
+        <div>
+          <h1 class="text-black text-2xl font-extrabold">Social Media</h3>
+        <br>
+        <img src="Images/Social.png" alt="">
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
+      <section class="mt-4">
+        <div class="grid grid-cols-1 lg:grid-cols-3 items-center justify-center bg-black">
+          <!-- 1st part start-->
+          <div class="flex items-center justify-center pt-8">
+            <div class="items-center justify-center  ml-20">
+              <h1 class="text-white text-2xl font-normal pb-6">Get In Touch</h1>
+              <p class="text-white text-base font-normal pb-6">Dit amet consectetur. <br> Condimentum  adipiscing aliquam <br> turpis placerat dolor. Purus <br> urna in sit nullam proin. </p>
+              <div class="flex items-center gap-1 pb-3">
+                <img src="Images/gmail.png" alt="">
+                <p class="text-white text-base font-normal">hockeys@support.com</p>
+              </div>
+              <div class="flex items-center gap-1">
+                <img src="Images/call.png" alt="">
+                <p class="text-white text-base font-normal">(+62) 123-321-543</p>
+              </div>
+            </div>
+          </div>
+           <!-- 1st part end-->
 
+
+           <!-- 2nd part start -->
+          <div class="flex items-center justify-center gap-20 pt-8">
+           <div>
+            <div class="gap-20 pb-6">
+              <h5 class="text-lg font-bold text-white">Company</h5>
+            </div>
+            <div>
+              <p class="text-base font-normal text-white pb-1">About us</p>
+              <p class="text-base font-normal text-white pb-1">Leadership</p>
+              <p class="text-base font-normal text-white pb-1">Careers</p>
+              <p class="text-base font-normal text-white pb-1">News & Article</p>
+              <p class="text-base font-normal text-white pb-1">Legal Notice</p>
+            </div>
+           </div>
+           <div>
+            <div class="pb-2">
+              <h5 class="text-lg font-bold text-white">Support</h5>
+            </div>
+            <div>
+              <p class="text-base font-normal text-white pb-1">Help Center</p>
+              <p class="text-base font-normal text-white pb-1">FAQ</p>
+              <p class="text-base font-normal text-white pb-1">Ticket Support</p>
+              <p class="text-base font-normal text-white pb-1">Contact Us</p>
+            </div>
+           </div>
+          </div>
+          <!-- 2nd part end -->
+          <!-- 3rd part start -->
+          <div class="flex items-center justify-center pt-8">
+            <div>
+              <div class="pb-8">
+                <h5 class="text-lg font-bold text-white">Services</h5>
+              </div>
+              <div>
+                <p class="text-base font-normal text-white pb-1">Academy</p>
+                <p class="text-base font-normal text-white pb-1">Group Lesson</p>
+                <p class="text-base font-normal text-white pb-1">Private Lesson</p>
+                <p class="text-base font-normal text-white pb-1">Hockeys for kids</p>
+                <p class="text-base font-normal text-white pb-1">Hockeys for Adult</p>
+              </div>
+             </div>
+          </div>
+          <!-- 3rd part ends -->
+        </div>
+      </section>
   </footer>
 </body>
 
