partial end commit

--- a/index.html
+++ b/index.html
@@ -486,6 +486,73 @@
         aliquam turpis placerat <br>dolor. Purus urna in sit nullam proin. </p>
     </section>
     <section class="mt-4">
+      <div class="grid grid-cols-1 lg:grid-cols-3">
+        <div>
+          <div class="mr-5 bg-[#BCED6D1A] mb-3 pl-5 pt-5 mt-5 rounded-2xl">
+           <img src="Images/Group 1171275317.png" alt="">
+           <div class="pt-4">
+             <p>Phone Number : </p>
+             <p>(+62) 123-321-543</p>
+           </div>
+          </div>
+          <div class="mr-5 bg-[#FDDD5F1A] mb-3 pl-5 pt-5 mt-5 rounded-2xl">
+           <img src="Images/Group 1171275318.png" alt="">
+           <div class="pt-4">
+             <p>Phone Number : </p>
+             <p>(+62) 123-321-543</p>
+           </div>
+          </div>
+          <div class="mr-5 bg-[#629CF31A] mb-3 pl-5 pt-5 mt-5 rounded-2xl">
+           <img src="Images/Group 1171275321.png" alt="">
+           <div class="pt-4">
+             <p>Phone Number : </p>
+             <p>(+62) 123-321-543</p>
+           </div>
+          </div>
+       </div>
+        <div class="lg:col-span-2">
+          <div class="grid gap-6 grid-cols-1 lg:grid-cols-2">
+            <div>
+              <label for="">Your Name</label>
+            <input type="text" placeholder="Enter your full name" class="mt-2 input input-bordered w-full" />
+            </div>
+            <div>
+              <label for="">Your Email</label>
+            <input type="text" placeholder="Enter your email" class="mt-2 input input-bordered w-full" />
+            </div>
+
+            <div>
+              <label for="">Subject</label>
+            <input type="text" placeholder="Enter your subject" class="mt-2 input input-bordered w-full" />
+            </div>
+
+            <div>
+              <label for="">Phone Number</label>
+            <input type="text" placeholder="Enter your phone number" class="mt-2 input input-bordered w-full" />
+            </div>
+          </div>
+          <div>
+            <label for="">Message</label>
+          <textarea class="w-full mt-2 textarea textarea-bordered" placeholder="Write your message" rows="5"></textarea>
+          </div>
+          <!-- <div>
+            <button class="btn bg-red-700">Send Message</button>
+          </div> -->
+          <div>
+            <!-- <label for="">Subject</label> -->
+          <input type="text" placeholder="Send Message" class="mt-2 input input-bordered w-full text-center text-white bg-hockey-primary" />
+          </div>
+        </div>
+        
+      </div>
+    </section>
+
+
+
+
+
+
+    <section class="mt-4">
       <div class=" flex items-center justify-center rounded-lg">
         <div>
           <h1 class="text-black text-2xl font-extrabold">Social Media</h3>
