mavy final commit

--- a/index.html
+++ b/index.html
@@ -492,47 +492,47 @@
            <img src="Images/Group 1171275317.png" alt="">
            <div class="pt-4">
              <p>Phone Number : </p>
-             <p>(+62) 123-321-543</p>
+             <p class="text-black text-base font-bold">(+62) 123-321-543</p>
            </div>
           </div>
           <div class="mr-5 bg-[#FDDD5F1A] mb-3 pl-5 pt-5 mt-5 rounded-2xl">
            <img src="Images/Group 1171275318.png" alt="">
            <div class="pt-4">
              <p>Phone Number : </p>
-             <p>(+62) 123-321-543</p>
+             <p class="text-black text-base font-bold">(+62) 123-321-543</p>
            </div>
           </div>
           <div class="mr-5 bg-[#629CF31A] mb-3 pl-5 pt-5 mt-5 rounded-2xl">
            <img src="Images/Group 1171275321.png" alt="">
            <div class="pt-4">
              <p>Phone Number : </p>
-             <p>(+62) 123-321-543</p>
+             <p class="text-black text-base font-bold">(+62) 123-321-543</p>
            </div>
           </div>
        </div>
         <div class="lg:col-span-2">
           <div class="grid gap-6 grid-cols-1 lg:grid-cols-2">
             <div>
-              <label for="">Your Name</label>
+              <label for=""> <span class="text-black  font-bold">Your Name</span> </label>
             <input type="text" placeholder="Enter your full name" class="mt-2 input input-bordered w-full" />
             </div>
             <div>
-              <label for="">Your Email</label>
+              <label for=""><span class="text-black  font-bold">Your Email</span></label>
             <input type="text" placeholder="Enter your email" class="mt-2 input input-bordered w-full" />
             </div>
 
             <div>
-              <label for="">Subject</label>
+              <label for=""><span class="text-black  font-bold">Subject</span></label>
             <input type="text" placeholder="Enter your subject" class="mt-2 input input-bordered w-full" />
             </div>
 
             <div>
-              <label for="">Phone Number</label>
+              <label for=""><span class="text-black  font-bold">Phone Number</span></label>
             <input type="text" placeholder="Enter your phone number" class="mt-2 input input-bordered w-full" />
             </div>
           </div>
           <div>
-            <label for="">Message</label>
+            <label for=""><span class="text-black  font-bold">Message</span></label>
           <textarea class="w-full mt-2 textarea textarea-bordered" placeholder="Write your message" rows="5"></textarea>
           </div>
           <!-- <div>
