--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <section>
       <div class="mt-4">
         <div class="relative">
-          <img src="Images/4.png" alt="">
+          <img class="w-full" src="Images/4.png" alt="">
           <div class="absolute left left-4 lg:left-10 bottom bottom-4 lg:bottom-12">
             <h4 class="text-xl font-semibold lg:text-2xl text-white">Professional Program</h3>
               <p class="text-xs lg:text-base text-white font-extralight lg:font-normal pt-1 lg:pt-3 pb-1 lg:pb-3">Dolor
