--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
         <div>
           <h3 class="text-2xl text-white pb-4">Meet all the heroes from the field</h3>
           <p class="text-base text-white">Dit amet consectetur. Condimentum dignissim adipiscing aliquam <br> turpis
-            placerat dolor. Purus urna in sit nullam proin. </p>
+            placerat dolor. Purus urna in sit nullam proin.</p>
         </div>
       </div>
     </div>
     <div class="h-[30vh] w-4/4  bg-black p-8 lg:hidden">
       <h3 class="text-xl text-white pb-2">Meet all the heroes from the field</h3>
       <p class="text-base text-white">Dit amet consectetur. Condimentum dignissim adipiscing aliquam <br> turpis
-        placerat dolor. Purus urna in sit nullam proin. </p>
+        placerat dolor. Purus urna in sit. </p>
     </div>
   </header>
   <main class="md:container md:mx-auto">
